# MedEvalKit

./: .gitignore  .gitmodules  BREAKPOINT_RESUME.md  CHAT_TEMPLATE_UPDATE.md  CHAT_TEMPLATE_UPDATE_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INFERENCE_VERIFICATION_REPORT.md  LLMs.py  MULTI_IMAGE_IMPLEMENTATION.md  QWEN3_VL_CHANGES.md  QWEN_MODELS_VERIFICATION.md  Readme.md  TEST_RESULTS_SUMMARY.txt  VERIFICATION.md  VERIFICATION_SUMMARY_CN.md  benchmarks.py  demo_chat_history.py  eval.py  eval_all_models.sh  install_deps.sh  pyproject.toml  test_breakpoint_resume.py  test_chat_history.py  test_fixes.py  test_format_logic.py  test_inference_comparison.py  test_inference_without_tools.py  test_multi_image_support.py  test_qwen3_vl_parameters.py  test_tool_evaluator_prompts.py  val_base.py
docs/: tool_evaluator_guide.md
examples/: eval.py  medical_agent.py  medical_tools_demo.py  projection.py  tool_evaluator_demo.py
models/BiMediX2/: BiMediX2_hf.py
models/HuatuoGPT/: HuatuoGPT_vllm.py
models/Hulu_Med/: Hulu_Med_hf.py
models/InternVL/: InternVL_hf.py  InternVL_vllm.py  utils.py
models/LLava_Med/: LLava_Med_hf.py  LLava_Med_vllm.py  utils.py
models/MedGemma/: MedGemma_hf.py
models/Qwen2_VL/: Qwen2_VL_hf.py
models/Qwen2_VL_MoE/: Qwen2_VL_hf.py  qwen2_vl_moe.py
models/Qwen3_VL/: Qwen3_VL_hf.py  Qwen3_VL_vllm.py
scripts/: prepare_iu_xray.py  prepare_mimic_cxr.py
tests/: test_integration.py
utils/: __init__.py  base_dataset.py  dataset_manager.py  question_formats.py  test_tool_evaluator.py  tool_evaluator.py  utils.py
utils/CMMLU/: CMMLU.py
utils/CheXpert_Plus/: CheXpert_Plus.py
utils/IU_XRAY/: IU_XRAY.py
utils/MIMIC_CXR/: MIMIC_CXR.py
utils/MMLU/: MMLU.py
utils/MMMU/: data_utils.py  eval_test.py  (+1 more)
(+9 files in other folders)
